Projet GL/test/src/test/deca/context/valid/increment4/extends-object.res
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:48) - verify program: start
DEBUG fr.ensimag.deca.tree.Program.verifyProgram(Program.java:53) - verify program: end
`> [3, 24] Program
   +> ListDeclClass [List with 1 elements]
   |  []> [3, 0] DeclClass
   |      +> [3, 6] Identifier (A)
   |      |  definition: type defined at [3, 0], type=A
   |      +> [3, 8] Identifier (Object)
   |      |  definition: type (builtin), type=Object
   |      +> ListDeclField [List with 0 elements]
   |      `> ListDeclMethod [List with 0 elements]
   `> EmptyMain
